# Chess_SFML

./: .gitignore  CMakeLists.txt  README.md
src/: Board.cpp  Board.h  ChessPieces.cpp  ChessPieces.h  MainWindow.cpp  MainWindow.h  SettingsProvider.h  main.cpp
